Fixed all sections being invisible

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -3,12 +3,7 @@
   align-items: center;
   margin: 2rem 0;
   flex-wrap: wrap;
-  opacity: 0; 
   transition: opacity 0.5s ease-in-out; 
-}
-
-.project.visible {
-  opacity: 1;
 }
 
 .project.left {
