--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -2,12 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  opacity: 0; 
   transition: opacity 0.5s ease-in-out; 
-}
-
-.projects.visible {
-  opacity: 1;
 }
 
 .projects-title {
@@ -20,7 +15,6 @@
   align-items: center;
   margin: 2rem 0;
   flex-wrap: wrap;
-  opacity: 0;
   transition: opacity 1s ease-in-out; 
 }
 
